fix overflow

--- a/scss/friends.scss
+++ b/scss/friends.scss
@@ -96,6 +96,8 @@
 }
 
 .friendsList {
+  margin-bottom: 91px;
+
   &--blockTitle {
     &--text {
       font-weight: 700;
